--- a/api.html
+++ b/api.html
@@ -21,6 +21,34 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <!--===================== General OG data =========================-->
+  <meta property="og:title" content="kong" />
+  <meta property="og:description" content="secure web node" />
+  <meta property="og:determiner" content="an" />
+  <meta property="og:site_name" content="kong" />
+  <meta property="og:image" content="https://kwatafana.org/logo.jpeg" />
+  <meta property="og:image:secure_url" content="https://kwatafana.org/logo.jpeg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
+  <meta property="og:image:alt" content="kong" />
+  <meta property="og:type" content="article">
+  <meta property="article:publisher" content="http://www.kong.kwatafana.org">
+  <meta property="article:published_time" content="15.02.2023">
+  <meta property="og:url" content="http://www.kong.kwatafana.org">
+  <meta property="og:locale" content="en_GB">
+  <meta property="og:website" content="http://www.kong.kwatafana.org">
+
+  <!--===================== Twitter OG data =========================-->
+  <meta name="twitter:title" content="kong">
+  <meta name="twitter:description" content="secure web node">
+  <meta name="twitter:image" content="https://kong.kwatafana.org/logo.jpeg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="kong">
+
+  <!--This will @mention you when people click twitter share
+      button on your article to tweet-->
+  <link rel="me" href="https://twitter.com/@kwatafana">
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
