Update kong website

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@ Roadmap</a></li>
                          secure web node |___/ v0.1.0</code></pre>
 <h2 id="links">🖇️ Links</h2>
 <ul class="incremental">
-<li><a href="https://kong.kwatafana.org/rust/doc/kong/index.html">Source
-Code</a></li>
+<li><a href="https://github.com/kwatafana/kong">Source Code</a></li>
 <li><a href="https://kong.kwatafana.org/rust/doc/kong/index.html">Rust
 documentation</a></li>
 </ul>
